fix contacts letter spacing

--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -87,7 +87,7 @@
     color: white;
     /* font-style: italic; */
     font-family: BebasNeue;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     transition: color 0.3s linear;
 
 }
